@@ -690,13 +690,11 @@ ARP_CACHE *Node::getArpCache()
    }
    else if (m_flags & NF_IS_SNMP)
    {
-      SNMP_Transport *pTransport;
-
-      pTransport = createSnmpTransport();
-      if (pTransport != NULL)
+      SNMP_Transport *transport = createSnmpTransport();
+      if (transport != NULL)
       {
-         pArpCache = SnmpGetArpCache(m_snmpVersion, pTransport);
-         delete pTransport;
+         pArpCache = SnmpGetArpCache(m_snmpVersion, transport);
+         delete transport;
       }
    }
 
@@ -5756,7 +5754,8 @@ AgentConnectionEx *Node::createAgentConnection(bool sendServerId)
    if ((!(m_flags & NF_IS_NATIVE_AGENT)) ||
        (m_flags & NF_DISABLE_NXCP) ||
        (m_dwDynamicFlags & NDF_AGENT_UNREACHABLE) ||
-       (m_dwDynamicFlags & NDF_UNREACHABLE))
+       (m_dwDynamicFlags & NDF_UNREACHABLE) ||
+       (m_status == STATUS_UNMANAGED))
       return NULL;
 
    AgentTunnel *tunnel = GetTunnelForNode(m_id);
@@ -5799,6 +5798,9 @@ AgentConnectionEx *Node::createAgentConnection(bool sendServerId)
  */
 AgentConnectionEx *Node::getAgentConnection()
 {
+   if (m_status == STATUS_UNMANAGED)
+      return NULL;
+
    AgentConnectionEx *conn = NULL;
 
    bool success;
@@ -6433,7 +6435,7 @@ UINT32 Node::getEffectiveSnmpProxy() const
  */
 SNMP_Transport *Node::createSnmpTransport(WORD port, const TCHAR *context)
 {
-   if (m_flags & NF_DISABLE_SNMP)
+   if ((m_flags & NF_DISABLE_SNMP) || (m_status == STATUS_UNMANAGED))
       return NULL;
 
    SNMP_Transport *pTransport = NULL;
